HVAC Backup 2/objects/Replacement_Request__c(1).object
<CustomObject>
    <fields>
        <fullName>Source_of_Replacement__c</fullName>
        <label>Source of Replacement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reassigned from ASP/Tech/Engineer</fullName>
                </value>
                <value>
                    <fullName>No Serviceable Pincode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Replacement Request</relationshipLabel>
        <relationshipName>Replacement_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Replacement Request</label>
    <nameField>
        <label>Replacement Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replacement Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>